fix: image width on mobile

--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -134,7 +134,7 @@ ol,
 dl,
 figure,
 .highlight {
-  margin-bottom: 15px;
+  margin-bottom: 1em;
 }
 
 body {
